--- a/analysis/sixBanalysis/config/6b_config/skim_ntuple_2018.cfg
+++ b/analysis/sixBanalysis/config/6b_config/skim_ntuple_2018.cfg
@@ -4,11 +4,11 @@
 year = 2018
 
 # jet energy resolution smearing
-JERScaleFactorFile       = data/jer/Summer19UL18_JRV2_MC_SF_AK4PFchs.txt 
-JERResolutionFile        = data/jer/Summer19UL18_JRV2_MC_PtResolution_AK4PFchs.txt 
+JERScaleFactorFile       = data/jer/Autumn18_V7b_MC_SF_AK4PFchs.txt 
+JERResolutionFile        = data/jer/Autumn18_V7b_MC_PtResolution_AK4PFchs.txt 
 
 # jet energy scale shift
-JECFileName              = data/jec/RegroupedV2_Summer19UL18_V5_MC_UncertaintySources_AK4PFchs.txt
+JECFileName              = data/jec/Autumn18_V19_MC_UncertaintySources_AK4PFchs.txt
 
 # pileup reweighting - comment the option to disable reading of PU rew weights (stores dummy 1 values)
 # PUweightFile              = data/pileup/test_PUweights_2018.root
@@ -22,13 +22,34 @@ DeepJetScaleFactorFile    = data/btag/DeepJet_106XUL18SF_WPonly.csv
 
 bTagWPDef = 0.0490, 0.2783, 0.7100  # Cuts for WP : Loose, Medium, Tight WPs
 
-saveLeptons = true ## save the electron and muon p4
+# Muon veto or selection
+applyMuonVeto      = false
+saveMuonColl       = true  # If veto is enabled, this should be false
+applyMuonSelection = false  # If veto is enabled, this should be false
+nMuonsCutValue     = 0     # Only needed when applyMuonSelection is true
+nMuonsCutDirection = >=    # Only needed when applyMuonSelection is true
+muonIsoCut         = Tight # Options: [vLoose, Loose, Medium, Tight, vTight, vvTight]
+muonPtCut          = 10.0
+muonEtaCut         = 2.4
+muonID             = Loose # Options: [Loose, Medium, Tight]
+
+# Electron muon or selection
+applyEleVeto       = false
+saveEleColl        = true  # If veto is enabled, this should be false
+applyEleSelection  = false  # If veto is enabled, this should be false
+nEleCutValue       = 0     # Only needed when applyEleSelection is true
+nEleCutDirection   = >=    # Only needed when applyEleSelection is true
+eleID              = Loose # Options: [Loose, 90, 80]
+elePtCut           = 15.0
+eleEtaCut          = 2.5
+eleIsoCut          = 0.15
+
 saveJetColl = true ## save the jet and genjet collections
-saveShapes  = false ## save the event shape variables
+saveShapes  = true ## save the event shape variables
 
 # ttbar : 2 highest DeepJet score
 # sixb  : events containing 6 jets
-skimType = presel
+skimType = sixb
 
 # choice of 6 jets (for sixb skim only)
 # .- bias_pt_sort : 3 groups by WP  (T, M, L) with pT order within each group
@@ -37,23 +58,24 @@ skimType = presel
 # .- maxbtag      : 6 highest b tagged jets
 # .- 5btag_maxpt  : 5 jets with highest b tag + 1 remaining highest pT jet
 # .- 4btag_maxpt  : 4 jets with highest b tag + 2 remaining highest pT jet
+# sixbJetChoice = btag_sortedpt_cuts
 sixbJetChoice = bias_pt_sort
 
 # how to pair the 6 jets into 3 H (for sixb skim only)
 # .- passthrough   : just a test function, pair them in the order they appear ABCDEF -> (AB)(CD)(EF)
-# .- m_H           : choose pairs with closest masses to mH=125 GeV
-# .- D_HHH         : minimise distance from a 3D diagonal a la HH->4b nonresonant (without correction)
-# .- D_HHH_corr    : minimise distance from a 3D diagonal a la HH->4b nonresonant (with user-defined correction)
+# .- D_HHH         : minimise distance from a 3D diagonal a la HH->4b nonresonant
 # .- 2jet_DNN      : use the output of the dijet classifier
 # .- min_diag_distance : distance from the 3D diagonal
 jetPairsChoice = D_HHH
-fitCorrection = 30 # Used in conjunction with the D_HHH_corr
-
 
 # how to determine which H are from Y->HH and which from direct X decay
 # .- passthrough : just a test function, pair them in the order they are returned by the pair function
 # .- leadJetInX  : the H with the leading jet of the 6 jets is HX, the other two are HY1 and HY2
-XYHChoice = leadJetInX
+XYHChoice = passthrough
+# how to order the 3H by pt (implemented with XYHChoice = passthrough)
+# .- X12 : HX, H1, H2
+# .- 12X : H1, H2, HX
+HHHOrder = X12
 
 # use regressed pT to build the H p4.
 # NOTE: This is applied in the recomputation of p4(H) *after* the bb jets have been chosen
@@ -65,28 +87,28 @@ bTagWP    = 1  # Which WP to apply for the selection above. 0 : Loose, 1: Medium
 
 ## -------------------------------------------------------------------------
 ## configuration of the various function-specific parameters
-
 [presel]
+apply = true
 pt_min  = 20
 eta_max = 2.5
 pf_id   = 1
 pu_id   = 1
+njetsCutValue = 6
+njetsCutDirection = >=
 
 [bias_pt_sort]
-applyPreselections = true
 applyJetCuts = true ## apply extra jet cuts after preselection
-pt_cuts = 60,40,40,20 # ,20,20 # pt cuts for jet selection
+pt_cuts = 60,40,40,20 
 btagWP_cuts = 2,2,1,1 # ,0,0 # btagWP cuts for jet selection
 
-# [6jet_DNN]
-# model_path = models/6jet_classifier/
+[6jet_DNN]
+model_path = models/keras/6jet_classifier/
 
-# [2jet_DNN]
-# model_path = models/2jet_classifier/
+[2jet_DNN]
+model_path = models/keras/2jet_classifier/
 
 [leadJetInX]
 useRegressedPt = true
-
 
 ## -------------------------------------------------------------------------
 ## trigger specific section
@@ -94,10 +116,10 @@ useRegressedPt = true
 
 #TriggerFiring
 applyTrigger = true # true/false to apply/not apply trigger bit
-saveDecision = false # true to create branches with individual trigger decisions
+saveDecision = true # true to create branches with individual trigger decisions
 
 #Trigger Matching
-makeORof                    = trigger1:HLT_PFHT330PT30_QuadPFJet_75_60_45_40_TriplePFBTagDeepCSV_4p5
+makeORof = trigger1:HLT_PFHT330PT30_QuadPFJet_75_60_45_40_TriplePFBTagDeepCSV_4p5
 
 # MaxDeltaR                   = 0.5
 # trigger1_ObjectRequirements = 1:10:0, 1:5:4, 3:3:0, 1:11:2, 1:12:4, 1:13:1, 1:14:2, 1:15:3, 1:16:4, 3:4:0, 1:17:3
@@ -113,5 +135,4 @@ makeORof                    = trigger1:HLT_PFHT330PT30_QuadPFJet_75_60_45_40_Tri
 
 
 [data]
-lumimask = data/lumi_cert/Cert_314472-325175_13TeV_Legacy2018_Collisions18_JSON.txt
-
+lumimask = data/lumi_cert/Cert_314472-325175_13TeV_17SeptEarlyReReco2018ABC_PromptEraD_Collisions18_JSON.txt
