--- a/analysis/sixBanalysis/config/old/skim_ntuple_2018_marina.cfg
+++ b/analysis/sixBanalysis/config/old/skim_ntuple_2018_marina.cfg
@@ -25,7 +25,7 @@ bTagWPDef = 0.0490, 0.2783, 0.7100  # Cuts for WP : Loose, Medium, Tight WPs
 # Muon veto or selection
 applyMuonVeto      = false
 saveMuonColl       = true  # If veto is enabled, this should be false
-applyMuonSelection = true  # If veto is enabled, this should be false
+applyMuonSelection = false  # If veto is enabled, this should be false
 nMuonsCutValue     = 0     # Only needed when applyMuonSelection is true
 nMuonsCutDirection = >=    # Only needed when applyMuonSelection is true
 muonIsoCut         = Tight # Options: [vLoose, Loose, Medium, Tight, vTight, vvTight]
@@ -36,7 +36,7 @@ muonID             = Loose # Options: [Loose, Medium, Tight]
 # Electron muon or selection
 applyEleVeto       = false
 saveEleColl        = true  # If veto is enabled, this should be false
-applyEleSelection  = true  # If veto is enabled, this should be false
+applyEleSelection  = false  # If veto is enabled, this should be false
 nEleCutValue       = 0     # Only needed when applyEleSelection is true
 nEleCutDirection   = >=    # Only needed when applyEleSelection is true
 eleID              = Loose # Options: [Loose, 90, 80]
@@ -58,7 +58,7 @@ skimType = sixb
 # .- maxbtag      : 6 highest b tagged jets
 # .- 5btag_maxpt  : 5 jets with highest b tag + 1 remaining highest pT jet
 # .- 4btag_maxpt  : 4 jets with highest b tag + 2 remaining highest pT jet
-#sixbJetChoice = btag_sortedpt_cuts
+# sixbJetChoice = btag_sortedpt_cuts
 sixbJetChoice = bias_pt_sort
 
 # how to pair the 6 jets into 3 H (for sixb skim only)
@@ -71,7 +71,11 @@ jetPairsChoice = D_HHH
 # how to determine which H are from Y->HH and which from direct X decay
 # .- passthrough : just a test function, pair them in the order they are returned by the pair function
 # .- leadJetInX  : the H with the leading jet of the 6 jets is HX, the other two are HY1 and HY2
-XYHChoice = leadJetInX
+XYHChoice = passthrough
+# how to order the 3H by pt (implemented with XYHChoice = passthrough)
+# .- X12 : HX, H1, H2
+# .- 12X : H1, H2, HX
+HHHOrder = X12
 
 # use regressed pT to build the H p4.
 # NOTE: This is applied in the recomputation of p4(H) *after* the bb jets have been chosen
@@ -93,7 +97,6 @@ njetsCutValue = 6
 njetsCutDirection = >=
 
 [bias_pt_sort]
-applyPreselections = true
 applyJetCuts = true ## apply extra jet cuts after preselection
 pt_cuts = 60,40,40,20 
 btagWP_cuts = 2,2,1,1 # ,0,0 # btagWP cuts for jet selection
