--- a/analysis/sixBanalysis/config/old/skim_ntuple_2018_presel.cfg
+++ b/analysis/sixBanalysis/config/old/skim_ntuple_2018_presel.cfg
@@ -28,7 +28,7 @@ saveShapes  = false ## save the event shape variables
 
 # ttbar : 2 highest DeepJet score
 # sixb  : events containing 6 jets
-skimType = sixb
+skimType = presel
 
 # choice of 6 jets (for sixb skim only)
 # .- bias_pt_sort : 3 groups by WP  (T, M, L) with pT order within each group
@@ -74,19 +74,20 @@ pf_id   = 1
 pu_id   = 1
 
 [bias_pt_sort]
-applyPreselections = true
+# applyPreselections = true
 applyJetCuts = true ## apply extra jet cuts after preselection
-pt_cuts = 60,40,40,20,20,20 # ,20,20 # pt cuts for jet selection
-btagWP_cuts = 2,2,1,1,0,0 # ,0,0 # btagWP cuts for jet selection
+pt_cuts = 60,40,40,20 # ,20,20 # pt cuts for jet selection
+btagWP_cuts = 2,2,1,1 # ,0,0 # btagWP cuts for jet selection
 
-[6jet_DNN]
-model_path = models/keras/6jet_classifier/
+# [6jet_DNN]
+# model_path = models/6jet_classifier/
 
-[2jet_DNN]
-model_path = models/keras/2jet_classifier/
+# [2jet_DNN]
+# model_path = models/2jet_classifier/
 
 [leadJetInX]
 useRegressedPt = true
+
 
 ## -------------------------------------------------------------------------
 ## trigger specific section
