--- a/analysis/sixBanalysis/config/old/skim_ntuple_2018_trigger.cfg
+++ b/analysis/sixBanalysis/config/old/skim_ntuple_2018_trigger.cfg
@@ -28,7 +28,7 @@ saveShapes  = false ## save the event shape variables
 
 # ttbar : 2 highest DeepJet score
 # sixb  : events containing 6 jets
-skimType = pass
+skimType = sixb
 
 # choice of 6 jets (for sixb skim only)
 # .- bias_pt_sort : 3 groups by WP  (T, M, L) with pT order within each group
@@ -66,17 +66,17 @@ bTagWP    = 1  # Which WP to apply for the selection above. 0 : Loose, 1: Medium
 ## -------------------------------------------------------------------------
 ## configuration of the various function-specific parameters
 
-[presel]
-pt_min  = 20
-eta_max = 2.5
-pf_id   = 1
-pu_id   = 1
+# [presel]
+# pt_min  = 20
+# eta_max = 2.5
+# pf_id   = 1
+# pu_id   = 1
 
-[bias_pt_sort]
-applyPreselections = true
-applyJetCuts = true ## apply extra jet cuts after preselection
-pt_cuts = 60,40,40,20 # ,20,20 # pt cuts for jet selection
-btagWP_cuts = 2,2,1,1 # ,0,0 # btagWP cuts for jet selection
+# [bias_pt_sort]
+applyPreselections = false
+applyJetCuts = false ## apply extra jet cuts after preselection
+# pt_cuts = 60,40,40,20,20,20 # ,20,20 # pt cuts for jet selection
+# btagWP_cuts = 2,2,1,1,0,0 # ,0,0 # btagWP cuts for jet selection
 
 # [6jet_DNN]
 # model_path = models/6jet_classifier/
@@ -87,20 +87,20 @@ btagWP_cuts = 2,2,1,1 # ,0,0 # btagWP cuts for jet selection
 [leadJetInX]
 useRegressedPt = true
 
-2jet_classifier=models/keras/2jet_classifier/
-3dijet_classifier=models/keras/3dijet_classifier/
-6jet_classifier=models/keras/6jet_classifier/
+# 2jet_classifier=models/keras/2jet_classifier/
+# 3dijet_classifier=models/keras/3dijet_classifier/
+# 6jet_classifier=models/keras/6jet_classifier/
 
 ## -------------------------------------------------------------------------
 ## trigger specific section
 [triggers]
 
 #TriggerFiring
-applyTrigger = false # true/false to apply/not apply trigger bit
+applyTrigger = true # true/false to apply/not apply trigger bit
 saveDecision = false # true to create branches with individual trigger decisions
 
 #Trigger Matching
-makeORof                    = trigger1:HLT_PFHT330PT30_QuadPFJet_75_60_45_40_TriplePFBTagDeepCSV_4p5
+makeORof = trigger1:HLT_PFHT330PT30_QuadPFJet_75_60_45_40_TriplePFBTagDeepCSV_4p5
 
 # MaxDeltaR                   = 0.5
 # trigger1_ObjectRequirements = 1:10:0, 1:5:4, 3:3:0, 1:11:2, 1:12:4, 1:13:1, 1:14:2, 1:15:3, 1:16:4, 3:4:0, 1:17:3
